--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Portfolio-side</h1>
+            <h1><a href="index.html">Portfolio-side</a></h1>
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Main</a></li>
@@ -22,8 +22,7 @@
         </div>
     </header>
     <main>
-        <h2>Main</h2>
-        <h3>So sigma skibidi</h3>
+        <h2>So sigma skibidi</h2>
             <p>I nate higgers</p>
             <figure>
                 <img src="./images/sigma-bilde.jpg" alt="sigma-bilde">
@@ -31,7 +30,8 @@
             </figure>
     </main>
     <footer>
-
+        <a href="mailto:dowissaugustis@gmail.com">my mail &#9829;</a>
+        <p><b>Made by Dovydas who is an autist and a illegal immigrant from Lithuania</b></p>
     </footer>
 </body>
 </html>
