--- a/pages/Marius.html
+++ b/pages/Marius.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>portfolio-ting</title>
     <link rel="stylesheet" href="/stil.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Portfolio-side</h1>
+            <h1><a href="/index.html">Portfolio-side</a></h1>
             <nav class="navbar">
                 <ul>
                     <li><a href="/index.html">Main</a></li>
@@ -23,9 +23,11 @@
         </div>
     </header>
     <main>
+        <div class="flex-col center">
+            <img src="/images/Common-Down-Syndrome-Associated-Conditions-1024x683.jpg" alt="Neger" class="relative downsmariusbilde">
+            <img src="https://i.scdn.co/image/ab67616d0000b27358368c8cbde244c33e6505ea" alt="Faktisk neger" class="absolute neger">
+            <h1 class="text-black">Marius liker svart tiss</h1>
+        </div>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
