--- a/pages/Nigger.html
+++ b/pages/Nigger.html
@@ -17,6 +17,7 @@
                     <li><a href="About.html">About</a></li>
                     <li><a href="Nigger.html">Nigger</a></li>
                     <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="Marius.html">Marius</a></li>
                 </ul> 
             </nav>
         </div>
