small additions to portfolio

--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -23,6 +23,10 @@
         </div>
     </header>
     <main>
+        <div class="flex-col center portfolioimages">
+            <img src="https://assets-wp.boundless.com/uploads/2025/01/AdobeStock_992073283-scaled.jpeg" alt="Immigrant">
+            <h1>I was at a protest for immigrants (my family)</h1>
+        </div>
     </main>
     <footer>
 
