css litt endring

--- a/pages/Nigger.html
+++ b/pages/Nigger.html
@@ -23,9 +23,9 @@
         </div>
     </header>
     <main>
+        <p><em><bold>I cant breathe with my strong long ahh veiny ahh dih</bold></em></p>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
