--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -26,6 +26,11 @@
         <div class="flex-col center portfolioimages">
             <img src="https://assets-wp.boundless.com/uploads/2025/01/AdobeStock_992073283-scaled.jpeg" alt="Immigrant">
             <h1>I was at a protest for immigrants (my family)</h1>
+            <div class="flex-row photoalbumgorge">
+                <div class="photogrid"><img src="https://img-9gag-fun.9cache.com/photo/aLB7Vjg_460s.jpg" alt=""></div>
+                <div class="photogrid"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpV6u9H6NWlDIZEHDwhPIwW7-GlHB347xdwJUeEko8km_-ZmnUzeGTCVMdXMc7Vt94QgU&usqp=CAU" alt=""></div>
+                <div class="photogrid"><img src="https://content.imageresizer.com/images/memes/Big-black-guy-big-dick-meme-5yrbtx.jpg" alt=""></div>
+            </div>
         </div>
     </main>
     <footer>
