fix lionk reinold koslink

--- a/pages/Nigger.html
+++ b/pages/Nigger.html
@@ -25,7 +25,7 @@
     <main>
         <p><em><bold>I cant breathe with my strong long ahh veiny ahh dih</bold></em></p>
         <p>i can't believe Eva lied to me 😔</p>
-        <img src="https://mail.google.com/mail/u/0?ui=2&ik=2584918487&attid=0.1&permmsgid=msg-a:r-3414447886043451851&th=195435e1b83a3dbb&view=fimg&fur=ip&permmsgid=msg-a:r-3414447886043451851&sz=s0-l75-ft&attbid=ANGjdJ9i41l_XTc9puQL97xmIffnQl3QFsHnJVMv6iklkOmIbztbmQ5-SrO6oYkIDUUwMI6vxXPe1PU--INZQZFXjqLv1SJJv0tFIycH2MFmk_V6Kl0RhvDiN9J3aOc&disp=emb&realattid=BDB40498-37B6-4FE3-B97D-55FFBAF9346B&zw" alt="feit" class="downsmariusbilde">
+        <img src="https://i.redd.it/2uokg5h655rd1.jpeg" alt="feit" class="downsmariusbilde">
         <img src="https://i.pinimg.com/474x/76/91/66/769166f650a2c99843edf29342f4384f.jpg" alt="feit" class="downsmariusbilde">
     </main>
     <footer>
