--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -32,6 +32,13 @@
                 <div class="photogrid"><img src="https://content.imageresizer.com/images/memes/Big-black-guy-big-dick-meme-5yrbtx.jpg" alt=""></div>
             </div>
         </div>
+        <div>
+            <div class="flex-col center gap2">
+                <img class="spin relative grandkidswalk" src="https://images3.memedroid.com/images/UPLOADED414/5a5cb82955811.jpeg" alt="">
+                <h1>I walked with my grandchildren</h1>
+                <img class="happyemoji absolute" src="https://i.pinimg.com/474x/9c/6e/30/9c6e3048e6dcb1952e8aa48440bda320.jpg" alt="">
+            </div>
+        </div>
     </main>
     <footer>
 
