--- a/pages/Nigger.html
+++ b/pages/Nigger.html
@@ -24,9 +24,9 @@
     </header>
     <main>
         <p><em><bold>I cant breathe with my strong long ahh veiny ahh dih</bold></em></p>
-        <p>i can't believe Eva lied to me 😔</p>
-        <img src="https://i.redd.it/2uokg5h655rd1.jpeg" alt="feit" class="downsmariusbilde">
-        <img src="https://i.pinimg.com/474x/76/91/66/769166f650a2c99843edf29342f4384f.jpg" alt="feit" class="downsmariusbilde">
+        <p>I have good grip with small children😔</p>
+        <img src="https://i.redd.it/2uokg5h655rd1.jpeg" alt="feit" class="photoalbumgorge">
+        <img src="https://i.pinimg.com/474x/76/91/66/769166f650a2c99843edf29342f4384f.jpg" alt="feit" class="photogrid">
     </main>
     <footer>
     </footer>
