--- a/pages/Marius.html
+++ b/pages/Marius.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio-ting</title>
-    <link rel="stylesheet" href="/stil.css">
+    <link rel="stylesheet" href="./stil.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <h1><a href="/index.html">Portfolio-side</a></h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/index.html">Main</a></li>
+                    <li><a href="./index.html">Main</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Nigger.html">Nigger</a></li>
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div class="flex-col center">
-            <img src="/images/Common-Down-Syndrome-Associated-Conditions-1024x683.jpg" alt="Neger" class="relative downsmariusbilde">
+            <img src="./images/Common-Down-Syndrome-Associated-Conditions-1024x683.jpg" alt="Neger" class="relative downsmariusbilde">
             <img src="https://i.scdn.co/image/ab67616d0000b27358368c8cbde244c33e6505ea" alt="Faktisk neger" class="absolute neger">
             <h1 class="text-black">Marius liker svart tiss</h1>
         </div>
