--- a/pages/Marius.html
+++ b/pages/Marius.html
@@ -12,7 +12,7 @@
             <h1><a href="/index.html">Portfolio-side</a></h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="./index.html">Main</a></li>
+                    <li><a href="index.html">Main</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Nigger.html">Nigger</a></li>
