--- a/pages/About.html
+++ b/pages/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="./stil.css">
+    <link rel="stylesheet" href="../stil.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <h1>Portfolio-side</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="./index.html">Main</a></li>
+                    <li><a href="../index.html">Main</a></li>
                     <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Nigger.html">Nigger</a></li>
