--- a/pages/Marius.html
+++ b/pages/Marius.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div class="flex-col center">
-            <img src="./images/Common-Down-Syndrome-Associated-Conditions-1024x683.jpg" alt="Neger" class="relative downsmariusbilde">
+            <img src="../images/Common-Down-Syndrome-Associated-Conditions-1024x683.jpg" alt="Neger" class="relative downsmariusbilde">
             <img src="https://i.scdn.co/image/ab67616d0000b27358368c8cbde244c33e6505ea" alt="Faktisk neger" class="absolute neger">
             <h1 class="text-black">Marius liker svart tiss</h1>
         </div>
